Added Syntax-Hightlighting with Prismjs, added API-Endpoint /config to get full configuration into the react web client

--- a/ui/assets/excluded_files.tpl.html
+++ b/ui/assets/excluded_files.tpl.html
@@ -5,6 +5,7 @@
         <title>Hound - Excluded Files</title>
         <link rel="stylesheet" href="css/octicons/octicons.css">
         <link rel="stylesheet" href="css/hound.css">
+        <link rel="stylesheet" href="css/prism.css">
     </head>
     <body>
         <div id="root"></div>
