--- a/ui/assets/index.tpl.html
+++ b/ui/assets/index.tpl.html
@@ -6,6 +6,7 @@
         <title>Hound</title>
         <link rel="stylesheet" href="css/octicons/octicons.css">
         <link rel="stylesheet" href="css/hound.css">
+        <link rel="stylesheet" href="css/prism.css">
         <link rel="search" href="//{{ .Host }}/open_search.xml"
               type="application/opensearchdescription+xml"
               title="Hound" />
